--- a/Bachelor_code/Ammann-Beenker_tiling_creation.ipynb
+++ b/Bachelor_code/Ammann-Beenker_tiling_creation.ipynb
@@ -9,15 +9,12 @@
     "## Libraries\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "from matplotlib.animation import FuncAnimation\n",
-    "from scipy.stats import kde\n",
     "\n",
     "## Plot settings\n",
     "plt.rc('xtick', direction='in', labelsize=14)\n",
     "plt.rc('ytick', direction='in', labelsize=14)\n",
     "plt.rc('axes', labelsize=20, titlesize=22)\n",
-    "plt.rc('legend', fontsize=14)\n",
-    "plt.rcParams[\"animation.html\"] = \"jshtml\""
+    "plt.rc('legend', fontsize=14)"
    ]
   },
   {
@@ -62,22 +59,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[(-7.742640687119286+5.32842712474619j),\n",
-       " (-8.242640687119286+4.121320343559643j),\n",
-       " (-7.035533905932738+4.621320343559643j)]"
-      ]
-     },
-     "execution_count": 94,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "## Now we select the points for the projection \n",
     "## This is based on whether or not the points lie inside an octagon when projected on 3rd and 4th dimensions \n",
@@ -118,25 +102,46 @@
     "total_jumps, jump_indices = jump_finder(z)\n",
     "\n",
     "with open('../Grids/AB_grid.txt', 'w') as file:\n",
-    "    file.write(f'Re  Im')\n",
-    "    file.write('\\n')\n",
     "    for i in z:\n",
-    "        file.write(f'{i.real} {i.imag}')\n",
+    "        file.write(f'{i.real},{i.imag}')\n",
     "        file.write('\\n')\n",
     "\n",
+    "max_length1 = max([len(x) for x in jump_indices])\n",
     "with open('../Grids/AB_jump_indices.txt', 'w') as file:\n",
     "    for i in jump_indices:\n",
-    "        for j in range(len(i)):\n",
-    "            file.write(f'{i[j]}')\n",
-    "            file.write(' ')\n",
-    "        file.write('\\n')\n",
+    "        if len(i) == max_length1:\n",
+    "            w = i + ['stop']\n",
+    "            for j in range(len(w)):\n",
+    "                file.write(f'{w[j]}')\n",
+    "                file.write(' ')\n",
+    "            file.write('\\n')\n",
+    "        else:\n",
+    "            diff = max_length1 - len(i)\n",
+    "            extension = ['stop' for _ in range(0,diff + 1)]\n",
+    "            extended_list = i + extension\n",
+    "            for j in range(len(extended_list)):\n",
+    "                file.write(f'{extended_list[j]}')\n",
+    "                file.write(' ')\n",
+    "            file.write('\\n')\n",
     "\n",
+    "max_length2 = max([len(x) for x in total_jumps])\n",
     "with open('../Grids/AB_jump_coordinates.txt', 'w') as file:\n",
     "    for i in total_jumps:\n",
-    "        for j in range(len(i)):\n",
-    "            file.write(f'({i[j].real},{i[j].imag})')\n",
-    "            file.write(' ')\n",
-    "        file.write('\\n')"
+    "        new_list = [f'({x.real},{x.imag})' for x in i]\n",
+    "        if len(new_list) == max_length2:\n",
+    "            new_list1 = new_list + ['stop']\n",
+    "            for j in range(len(new_list1)):\n",
+    "                file.write(f'{new_list1[j]}')\n",
+    "                file.write(' ')\n",
+    "            file.write('\\n')\n",
+    "        else:\n",
+    "            diff = max_length2 - len(new_list)\n",
+    "            extension = ['stop' for _ in range(0,diff + 1)]\n",
+    "            extended_list = new_list + extension\n",
+    "            for j in range(len(extended_list)):\n",
+    "                file.write(f'{extended_list[j]}')\n",
+    "                file.write(' ')\n",
+    "            file.write('\\n')"
    ]
   },
   {
@@ -338,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
