animation of perturbation and fixed -J instead of J

--- a/Code/AB_animation.ipynb
+++ b/Code/AB_animation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,7 +181,7 @@
     "    # Fill out the Hamiltonian according to the psi vector, i.e. the basis chosen through generation of the tiling\n",
     "    for x, y, z in zip(k_H, jump_indices, phase_factors):\n",
     "        for k, t in zip(y, z):\n",
-    "            H[x, k] = J * np.exp(1j * t)\n",
+    "            H[x, k] = -J * np.exp(1j * t)\n",
     "\n",
     "    # Now we find the eigenvalues and eigenvectors\n",
     "    # Note that eigh returns normalized eigenvectors!\n",
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -280,7 +280,7 @@
        "\"state_check = 413\\ntimes = [0,5,10,20,25]\\nphis = [time_evolve(state_check, t, evecs, evals, bott_indices) for t in times]\\nvec_0, dos0 = phis[0]\\nmax_dos = max(dos0)\\nfig, ax = plt.subplots(len(times), figsize= (5, 5*len(times)))\\n# Set colour gradient\\nplt.set_cmap('binary')\\nfor vecs, t in zip(phis, range(len(times))):\\n    vec, dos = vecs\\n    # Plot all possible paths between vertices\\n    for i,j in zip(grid_final,jump_final):\\n        xs = [w[0] for w in j]\\n        ys = [w[1] for w in j]\\n        for l,k in zip(xs,ys):\\n            ax[t].plot([i[0], l], [i[1], k], color= 'k', linewidth= 0.5, zorder= 1, alpha= 0.5)\\n\\n    marker_size = 12\\n\\n    xs = [w[0] for w in grid_final]\\n    ys = [w[1] for w in grid_final]\\n\\n    \\n    # Plot, noting c sets the densit\\n    cax = ax[t].scatter(x= xs, y= ys, s= marker_size, c= dos, zorder= 2, vmin=0, vmax= max_dos)\\n    # Attach colorbar\\n    fig.colorbar(cax, ax= ax[t])\\n    ax[t].axis('equal')\\nplt.show()\""
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -366,16 +366,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\"for s in range(len(evals)):\\n#for s in [0,1]:\\n    state_check = s\\n    times = [0,10,20]\\n    phis = [time_evolve(state_check, t, evecs, evals, bott_indices) for t in times]\\n    vec_0, dos0 = phis[0]\\n    max_dos = max(dos0)\\n    fig, ax = plt.subplots(len(times), figsize= (6, 6*len(times)))\\n    # Set colour gradient\\n    plt.set_cmap('binary')\\n    for vecs, t in zip(phis, range(len(times))):\\n        vec, dos = vecs\\n        # Plot all possible paths between vertices\\n        #for i,j in zip(grid_final,jump_final):\\n         #   xs = [w[0] for w in j]\\n          #  ys = [w[1] for w in j]\\n           # for l,k in zip(xs,ys):\\n            #    ax[t].plot([i[0], l], [i[1], k], color= 'k', linewidth= 0.5, zorder= 1, alpha= 0.5)\\n\\n        marker_size = 12\\n\\n        xs = [w[0] for w in grid_final]\\n        ys = [w[1] for w in grid_final]\\n\\n        \\n        # Plot, noting c sets the densit\\n        cax = ax[t].scatter(x= xs, y= ys, s= marker_size, c= dos, zorder= 2, vmin=0, vmax= max_dos)\\n        # Attach colorbar\\n        fig.colorbar(cax, ax= ax[t])\\n        ax[t].axis('equal')\\n    plt.savefig(f'../State_search/state_{s}.png')\\n    plt.close(fig)\\n    plt.clf()\""
+       "\"for s in range(len(evals)):\\n#for s in [0,1]:\\n    state_check = s\\n    times = [0,10,20]\\n    phis = [time_evolve(state_check, t, evecs, evals, bott_indices) for t in times]\\n    vec_0, dos0 = phis[0]\\n    max_dos = max(dos0)\\n    fig, ax = plt.subplots(len(times), figsize= (6, 6*len(times)))\\n    # Set colour gradient\\n    plt.set_cmap('binary')\\n    for vecs, t in zip(phis, range(len(times))):\\n        vec, dos = vecs\\n        # Plot all possible paths between vertices\\n        #for i,j in zip(grid_final,jump_final):\\n         #   xs = [w[0] for w in j]\\n          #  ys = [w[1] for w in j]\\n           # for l,k in zip(xs,ys):\\n            #    ax[t].plot([i[0], l], [i[1], k], color= 'k', linewidth= 0.5, zorder= 1, alpha= 0.5)\\n\\n        marker_size = 12\\n\\n        xs = [w[0] for w in grid_final]\\n        ys = [w[1] for w in grid_final]\\n\\n        \\n        # Plot, noting c sets the densit\\n        cax = ax[t].scatter(x= xs, y= ys, s= marker_size, c= dos, zorder= 2, vmin=0, vmax= max_dos)\\n        # Attach colorbar\\n        fig.colorbar(cax, ax= ax[t])\\n        ax[t].axis('equal')\\n    plt.savefig(f'../BLT_search/state_{s}.png')\\n    plt.close(fig)\\n    plt.clf()\""
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -420,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -429,7 +429,7 @@
        "\"## Magic line for animation\\n%matplotlib inline\\n# Attempt at animating time evolution\\n\\n# Set figure up first\\nfig, ax = plt.subplots(figsize=(6,6))\\n# Set bascis\\nsites = ax.scatter(x=[], y=[], c=[])\\n\\nxs = [w[0] for w in grid_final]\\nys = [w[1] for w in grid_final]\\n\\n\\n# Set timesteps, state of choice for animation, and number of frames\\ntimestep = 0.1\\nstate_of_choice = 344\\nn_frames = 250\\n\\nvecs, dos_max = time_evolve(state_of_choice, 0, evecs, evals, bott_indices)\\n\\nplt.set_cmap('binary')\\n#cax = ax.scatter(x= xs, y= ys, s= marker_size, c= dos_max, zorder= 2)\\n\\n\\n# This function will do the animating\\ndef update(i):\\n    plt.clf()\\n    # t is the steps we progress, timestep sets the steplength\\n    t = i * timestep\\n\\n    # Using the time evolution to find density of states for each increment\\n    vecs, dos = time_evolve(state_of_choice, t, evecs, evals, bott_indices)\\n    cf = plt.scatter(x= xs, y= ys, c= dos, vmin=0, vmax= max(dos_max))\\n    #plt.scatter(x= xs, y= ys, c= dos, vmin=0, vmax= max(dos_max))\\n    plt.colorbar(cf)\\n    plt.axis('equal')\\n\\n\\nanim = FuncAnimation(fig, update, frames= n_frames, interval=50)\\n\\nanim.save(F'animation_es_state_{state_of_choice}.gif', writer='imagemagick', fps=30)\\n\\nanim\""
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
