--- a/Code/AB_tiling_creation.ipynb
+++ b/Code/AB_tiling_creation.ipynb
@@ -228,7 +228,7 @@
     "    # Fill out the Hamiltonian according to the psi vector, i.e. the basis chosen through generation of the tiling\n",
     "    for x, y, z in zip(k_H, jump_indices, phase_factors):\n",
     "        for k, t in zip(y, z):\n",
-    "            H[x, k] = J * np.exp(1j * t)\n",
+    "            H[x, k] = -J * np.exp(1j * t)\n",
     "\n",
     "    # Now we find the eigenvalues and eigenvectors\n",
     "    # Note that eigh returns normalized eigenvectors!\n",
