--- a/Code/Ammann-Beenker/AB_Bott_index.ipynb
+++ b/Code/Ammann-Beenker/AB_Bott_index.ipynb
@@ -242,7 +242,7 @@
     "            for j in dim:\n",
     "                # Now we simply set the condition that we always add the product of two projections corresponding to the current n up to which we have be doing the sum\n",
     "                P[i][j] += dot_ps[i][n] * (dot_ps[j][n]).conj()\n",
-    "\n",
+    "        print(P)\n",
     "        # With the matrix modified for the n'th entry we now find that we can calculate the Bott index \n",
     "        # To this end we firstly define the matrices Vx and Vy\n",
     "        # We write out some matrix multiplication explicitly for readability\n",
@@ -329,7 +329,64 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 6.71825352e-07+0.00000000e+00j  1.78329063e-07+2.97865642e-07j\n",
+      "  -4.51871440e-06+4.38203553e-06j ...  4.34604871e-06+4.55333679e-06j\n",
+      "   1.86443685e-08-3.46666385e-07j  4.35272724e-07-5.11748922e-07j]\n",
+      " [ 1.78329063e-07-2.97865642e-07j  1.79399594e-07+0.00000000e+00j\n",
+      "   7.43407075e-07+3.16661771e-06j ...  3.17241583e-06-7.18261527e-07j\n",
+      "  -1.48751714e-07-1.00285302e-07j -1.11354303e-07-3.28824291e-07j]\n",
+      " [-4.51871440e-06-4.38203553e-06j  7.43407075e-07-3.16661771e-06j\n",
+      "   5.89751714e-05+0.00000000e+00j ...  4.67875626e-07-5.89733154e-05j\n",
+      "  -2.38656221e-06+2.21007751e-06j -6.26557940e-06+6.02934495e-07j]\n",
+      " ...\n",
+      " [ 4.34604871e-06-4.55333679e-06j  3.17241583e-06+7.18261527e-07j\n",
+      "   4.67875626e-07+5.89733154e-05j ...  5.89751714e-05+0.00000000e+00j\n",
+      "  -2.22894160e-06-2.36895360e-06j -6.52623081e-07-6.26059888e-06j]\n",
+      " [ 1.86443685e-08+3.46666385e-07j -1.48751714e-07+1.00285302e-07j\n",
+      "  -2.38656221e-06-2.21007751e-06j ... -2.22894160e-06+2.36895360e-06j\n",
+      "   1.79399594e-07+0.00000000e+00j  2.76145480e-07+2.10401686e-07j]\n",
+      " [ 4.35272724e-07+5.11748922e-07j -1.11354303e-07+3.28824291e-07j\n",
+      "  -6.26557940e-06-6.02934495e-07j ... -6.52623081e-07+6.26059888e-06j\n",
+      "   2.76145480e-07-2.10401686e-07j  6.71825352e-07+0.00000000e+00j]]\n",
+      "[[ 2.03064232e-06+0.00000000e+00j  3.55543059e-07+9.83797181e-07j\n",
+      "  -1.62531977e-05+8.77406706e-06j ...  4.72501471e-08-7.21562113e-06j\n",
+      "  -2.17855421e-07+3.21147007e-07j -4.45098879e-07+5.23301504e-07j]\n",
+      " [ 3.55543059e-07-9.83797181e-07j  5.48770076e-07+0.00000000e+00j\n",
+      "   1.43012081e-06+9.66299058e-06j ... -3.32920060e-06-8.31079512e-08j\n",
+      "   1.57517053e-07+1.06194711e-07j  2.96323535e-07+2.50576829e-07j]\n",
+      " [-1.62531977e-05-8.77406706e-06j  1.43012081e-06-9.66299058e-06j\n",
+      "   1.74508053e-04+0.00000000e+00j ... -4.48696857e-07+5.65559303e-05j\n",
+      "   1.81434230e-06-2.79260552e-06j  4.68267954e-06-5.48998480e-06j]\n",
+      " ...\n",
+      " [ 4.72501471e-08+7.21562113e-06j -3.32920060e-06+8.31079512e-08j\n",
+      "  -4.48696857e-07-5.65559303e-05j ...  1.74508053e-04+0.00000000e+00j\n",
+      "  -7.26479479e-06-6.53003744e-06j -6.83220792e-06-1.71601755e-05j]\n",
+      " [-2.17855421e-07-3.21147007e-07j  1.57517053e-07-1.06194711e-07j\n",
+      "   1.81434230e-06+2.79260552e-06j ... -7.26479479e-06+6.53003744e-06j\n",
+      "   5.48770076e-07+0.00000000e+00j  9.38065560e-07+4.62926307e-07j]\n",
+      " [-4.45098879e-07-5.23301504e-07j  2.96323535e-07-2.50576829e-07j\n",
+      "   4.68267954e-06+5.48998480e-06j ... -6.83220792e-06+1.71601755e-05j\n",
+      "   9.38065560e-07-4.62926307e-07j  2.03064232e-06+0.00000000e+00j]]\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\jeppe\\Documents\\GitHub\\Bachelor\\Code\\AB_Bott_index.ipynb Cell 7\u001b[0m in \u001b[0;36m<cell line: 20>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/jeppe/Documents/GitHub/Bachelor/Code/AB_Bott_index.ipynb#W6sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39m\"\"\"# Take field strength of B= 2pi so that phi/phi0= 0.5\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/jeppe/Documents/GitHub/Bachelor/Code/AB_Bott_index.ipynb#W6sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39mevecs_many = []\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/jeppe/Documents/GitHub/Bachelor/Code/AB_Bott_index.ipynb#W6sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39mfor n in np.arange(0.1,0.225, 0.025):\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/jeppe/Documents/GitHub/Bachelor/Code/AB_Bott_index.ipynb#W6sZmlsZQ%3D%3D?line=16'>17</a>\u001b[0m \u001b[39m    Butts.append(Botts)\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/jeppe/Documents/GitHub/Bachelor/Code/AB_Bott_index.ipynb#W6sZmlsZQ%3D%3D?line=17'>18</a>\u001b[0m \u001b[39m    maxes.append(package)\"\"\"\u001b[39;00m\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/jeppe/Documents/GitHub/Bachelor/Code/AB_Bott_index.ipynb#W6sZmlsZQ%3D%3D?line=19'>20</a>\u001b[0m Botts \u001b[39m=\u001b[39m bott_index(\u001b[39mrange\u001b[39;49m(\u001b[39mlen\u001b[39;49m(grid_final)), evecs)\n",
+      "\u001b[1;32mc:\\Users\\jeppe\\Documents\\GitHub\\Bachelor\\Code\\AB_Bott_index.ipynb Cell 7\u001b[0m in \u001b[0;36mbott_index\u001b[1;34m(ns, evec)\u001b[0m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/jeppe/Documents/GitHub/Bachelor/Code/AB_Bott_index.ipynb#W6sZmlsZQ%3D%3D?line=41'>42</a>\u001b[0m \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m dim:\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/jeppe/Documents/GitHub/Bachelor/Code/AB_Bott_index.ipynb#W6sZmlsZQ%3D%3D?line=42'>43</a>\u001b[0m     \u001b[39mfor\u001b[39;00m j \u001b[39min\u001b[39;00m dim:\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/jeppe/Documents/GitHub/Bachelor/Code/AB_Bott_index.ipynb#W6sZmlsZQ%3D%3D?line=43'>44</a>\u001b[0m         \u001b[39m# Now we simply set the condition that we always add the product of two projections corresponding to the current n up to which we have be doing the sum\u001b[39;00m\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/jeppe/Documents/GitHub/Bachelor/Code/AB_Bott_index.ipynb#W6sZmlsZQ%3D%3D?line=44'>45</a>\u001b[0m         P[i][j] \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m dot_ps[i][n] \u001b[39m*\u001b[39;49m (dot_ps[j][n])\u001b[39m.\u001b[39;49mconj()\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/jeppe/Documents/GitHub/Bachelor/Code/AB_Bott_index.ipynb#W6sZmlsZQ%3D%3D?line=45'>46</a>\u001b[0m \u001b[39mprint\u001b[39m(P)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/jeppe/Documents/GitHub/Bachelor/Code/AB_Bott_index.ipynb#W6sZmlsZQ%3D%3D?line=46'>47</a>\u001b[0m \u001b[39m# With the matrix modified for the n'th entry we now find that we can calculate the Bott index \u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/jeppe/Documents/GitHub/Bachelor/Code/AB_Bott_index.ipynb#W6sZmlsZQ%3D%3D?line=47'>48</a>\u001b[0m \u001b[39m# To this end we firstly define the matrices Vx and Vy\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/jeppe/Documents/GitHub/Bachelor/Code/AB_Bott_index.ipynb#W6sZmlsZQ%3D%3D?line=48'>49</a>\u001b[0m \u001b[39m# We write out some matrix multiplication explicitly for readability\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/jeppe/Documents/GitHub/Bachelor/Code/AB_Bott_index.ipynb#W6sZmlsZQ%3D%3D?line=49'>50</a>\u001b[0m \u001b[39m# Note again we are explicit in the dtype to root out possible errors\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/jeppe/Documents/GitHub/Bachelor/Code/AB_Bott_index.ipynb#W6sZmlsZQ%3D%3D?line=50'>51</a>\u001b[0m \u001b[39m# First Ux\u001b[39;00m\n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "\"\"\"# Take field strength of B= 2pi so that phi/phi0= 0.5\n",
     "evecs_many = []\n",
@@ -355,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -385,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
