More conversion - analysis of penrose

--- a/Code/Ammann-Beenker/AB_rotation_new_new.ipynb
+++ b/Code/Ammann-Beenker/AB_rotation_new_new.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,14 +19,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "## Read coordinates and indices\n",
     "\n",
     "grid_coordinates = []\n",
-    "with open('../Grids/AB_grid.txt', 'r') as reader:\n",
+    "with open('../../Grids/AB_grid.txt', 'r') as reader:\n",
     "    line = reader.readline()\n",
     "\n",
     "    while line != '':\n",
@@ -36,7 +36,7 @@
     "        line = reader.readline()\n",
     "\n",
     "jump_coordinates = []\n",
-    "with open('../Grids/AB_jump_coordinates.txt', 'r') as reader:\n",
+    "with open('../../Grids/AB_jump_coordinates.txt', 'r') as reader:\n",
     "    line = reader.readline()\n",
     "\n",
     "    while line != '':\n",
@@ -55,7 +55,7 @@
     "        jump_coordinates.append(data_block)\n",
     "\n",
     "jump_indices = []\n",
-    "with open('../Grids/AB_jump_indices.txt', 'r') as reader:\n",
+    "with open('../../Grids/AB_jump_indices.txt', 'r') as reader:\n",
     "    line = reader.readline()\n",
     "\n",
     "    while line != '':\n",
@@ -70,7 +70,7 @@
     "        jump_indices.append(data_block)\n",
     "\n",
     "bott_indices = []\n",
-    "with open('Bott_indices.txt', 'r') as reader:\n",
+    "with open('AB_Bott_indices.txt', 'r') as reader:\n",
     "    line = reader.readline()\n",
     "    \n",
     "    while line != '':\n",
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -702,7 +702,7 @@
     "rot_evals_diag = np.diag(D)\n",
     "diag_args = [argz(x) for x in rot_evals_diag]\n",
     "\n",
-    "with open('../Separate_files/AB_args.txt', 'w') as file:\n",
+    "with open('../../Separate_files/AB_args.txt', 'w') as file:\n",
     "    for i in diag_args:\n",
     "        file.write(f'{i}')\n",
     "        file.write('\\n')"
