--- a/Code/Ammann-Beenker/Comparison_of_pure_unpure/Bulk/Comparison_of_pure_and_unpure_crystal_0250.ipynb
+++ b/Code/Ammann-Beenker/Comparison_of_pure_unpure/Bulk/Comparison_of_pure_and_unpure_crystal_0250.ipynb
@@ -25,14 +25,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "## Read coordinates and indices\n",
     "\n",
     "grid_coordinates = []\n",
-    "with open('../../../Grids/AB_grid.txt', 'r') as reader:\n",
+    "with open('../../../../Grids/AB_grid.txt', 'r') as reader:\n",
     "    line = reader.readline()\n",
     "\n",
     "    while line != '':\n",
@@ -42,7 +42,7 @@
     "        line = reader.readline()\n",
     "\n",
     "jump_coordinates = []\n",
-    "with open('../../../Grids/AB_jump_coordinates.txt', 'r') as reader:\n",
+    "with open('../../../../Grids/AB_jump_coordinates.txt', 'r') as reader:\n",
     "    line = reader.readline()\n",
     "\n",
     "    while line != '':\n",
@@ -61,7 +61,7 @@
     "        jump_coordinates.append(data_block)\n",
     "\n",
     "jump_indices = []\n",
-    "with open('../../../Grids/AB_jump_indices.txt', 'r') as reader:\n",
+    "with open('../../../../Grids/AB_jump_indices.txt', 'r') as reader:\n",
     "    line = reader.readline()\n",
     "\n",
     "    while line != '':\n",
@@ -76,7 +76,7 @@
     "        jump_indices.append(data_block)\n",
     "\n",
     "bott_indices = []\n",
-    "with open('../AB_Bott_indices_B_scale_0250.txt', 'r') as reader:\n",
+    "with open('../../AB_Bott_indices_B_scale_0250.txt', 'r') as reader:\n",
     "    line = reader.readline()\n",
     "    \n",
     "    while line != '':\n",
@@ -120,7 +120,7 @@
     "\n",
     "# Read the phases in\n",
     "evec_phases = []\n",
-    "with open('../../../Separate_files/AB_args.txt', 'r') as reader:\n",
+    "with open('../../../../Separate_files/AB_args.txt', 'r') as reader:\n",
     "    line = reader.readline()\n",
     "\n",
     "    while line != '':\n",
@@ -153,18 +153,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Now load in the different eigenvalues and eigenvectors\n",
-    "pure_evals = np.loadtxt(\"Eigenvalues/pure.txt\")\n",
-    "un_mixed_evals = np.loadtxt(\"Eigenvalues/unpure_mixed.txt\")\n",
-    "un_positive_evals = np.loadtxt(\"Eigenvalues/unpure_positive.txt\")\n",
+    "pure_evals = np.loadtxt(\"../Eigenvalues/pure.txt\")\n",
+    "un_mixed_evals = np.loadtxt(\"../Eigenvalues/unpure_mixed.txt\")\n",
+    "un_positive_evals = np.loadtxt(\"../Eigenvalues/unpure_positive.txt\")\n",
     "\n",
-    "pure_evecs = np.loadtxt(\"Eigenvectors/pure.txt\", dtype= np.complex128)\n",
-    "un_mixed_evecs = np.loadtxt(\"Eigenvectors/unpure_mixed.txt\", dtype= np.complex128)\n",
-    "un_positive_evecs = np.loadtxt(\"Eigenvectors/unpure_positive.txt\", dtype= np.complex128)"
+    "pure_evecs = np.loadtxt(\"../Eigenvectors/pure.txt\", dtype= np.complex128)\n",
+    "un_mixed_evecs = np.loadtxt(\"../Eigenvectors/unpure_mixed.txt\", dtype= np.complex128)\n",
+    "un_positive_evecs = np.loadtxt(\"../Eigenvectors/unpure_positive.txt\", dtype= np.complex128)"
    ]
   },
   {
@@ -186,7 +186,7 @@
     }
    ],
    "source": [
-    "# Now define the group of indices of interest. They stem from analysis script\n",
+    "\"\"\"# Now define the group of indices of interest. They stem from analysis script\n",
     "group = [551, 552, 554]\n",
     "\n",
     "## Magic line for animation\n",
@@ -239,15 +239,50 @@
     "\n",
     "    anim.save(f'Time_evolutions/' + c + '.gif', writer='imagemagick', fps=30)\n",
     "\n",
-    "    #anim"
+    "    #anim\"\"\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "for t in np.arange(0,600,100):\n",
+    "    # Set figure up first\n",
+    "    fig, ax = plt.subplots(figsize=(6,6))\n",
+    "\n",
+    "    # Plot all possible paths between vertices\n",
+    "    for i,j in zip(grid_scaled, jump_scaled):\n",
+    "        xs = [w[0] for w in j]\n",
+    "        ys = [w[1] for w in j]\n",
+    "        for l,k in zip(xs,ys):\n",
+    "            ax.plot([i[0], l], [i[1], k], color= 'k', zorder= 1, linewidth= 0.5)\n",
+    "\n",
+    "    # Get points for scatter plot\n",
+    "    xs = [w[0] for w in grid_scaled]\n",
+    "    ys = [w[1] for w in grid_scaled]\n",
+    "\n",
+    "    # Time evolution segment\n",
+    "    group = [551, 552, 554]\n",
+    "    B_scale = 0.25\n",
+    "    # Initial setup\n",
+    "    psi_0, dos_0 = time_evolve_evec(group, 0,pure_evecs, pure_evals)\n",
+    "    dos_max = max(dos_0)\n",
+    "\n",
+    "    # Actual evolution\n",
+    "    time = t\n",
+    "    psi, dos = time_evolve_evec(group, time, pure_evecs, pure_evals)\n",
+    "\n",
+    "    # Plotting part\n",
+    "    cf = plt.scatter(x= xs, y= ys, c= dos, vmin=0, vmax= dos_max)\n",
+    "    plt.colorbar(cf)\n",
+    "    plt.axis('equal')\n",
+    "\n",
+    "    plt.set_cmap('hot_r')\n",
+    "    plt.savefig(f'TE_frames/pure/AB_bulk_time_{t}', bbox_inches= 'tight')\n",
+    "    plt.close()"
+   ]
   }
  ],
  "metadata": {
