--- a/Code/Ammann-Beenker/Comparison_of_pure_unpure/Perturbation_of_few_states/Hamiltonian_script.ipynb
+++ b/Code/Ammann-Beenker/Comparison_of_pure_unpure/Perturbation_of_few_states/Hamiltonian_script.ipynb
@@ -182,9 +182,9 @@
    "outputs": [],
    "source": [
     "# Load in Vs from other script and call them perturbs\n",
-    "perturbs = np.loadtxt('../Vs_sigma_06.txt')\n",
+    "perturbs = np.loadtxt('Vs_sigma_states_546_547_548.txt')\n",
     "# Define the scaling of Vs\n",
-    "V_scale = 3\n",
+    "V_scale = 4.45\n",
     "\n",
     "\n",
     "# The mixed unpure\n",
