--- a/Code/Ammann-Beenker/AB_BLT_search_different_flux/Dynamics_of_flux_025/Dynamics_script.ipynb
+++ b/Code/Ammann-Beenker/AB_BLT_search_different_flux/Dynamics_of_flux_025/Dynamics_script.ipynb
@@ -347,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -361,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -406,13 +406,13 @@
     "ax.yaxis.set_label_coords(-0.125, 0.5)\n",
     "\n",
     "ax.legend(loc= 1)\n",
-    "plt.savefig(\"example_overlap_flux_025.png\", bbox_inches= 'tight')\n",
+    "#plt.savefig(\"example_overlap_flux_025.png\", bbox_inches= 'tight')\n",
     "plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -455,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -514,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -581,7 +581,7 @@
     "empty = '_'\n",
     "name_file = empty.join([str(x) for x in target_group])\n",
     "\n",
-    "plt.savefig(f\"es_time_evolve/{name_file}/overlap_change_flux_025.png\", bbox_inches= 'tight')\n",
+    "#plt.savefig(f\"es_time_evolve/{name_file}/overlap_change_flux_025.png\", bbox_inches= 'tight')\n",
     "\n",
     "plt.show()"
    ]
@@ -663,25 +663,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'times = [np.arange(0,90,30), np.arange(0,366,122), np.arange(0,150,50)]\\nfor v, time in zip(select_Vs, times):\\n\\n    fig, ax = plt.subplots(1, len(time) + 1, figsize=(10, 3), gridspec_kw={\"width_ratios\":[0.33, 0.33, 0.33, 0.03]})\\n    \\n    for z, t in enumerate(time):\\n        # Plot all possible paths between vertices\\n        for i,j in zip(grid_scaled, jump_scaled):\\n            xs = [w[0] for w in j]\\n            ys = [w[1] for w in j]\\n            for l,k in zip(xs,ys):\\n                ax[z].plot([i[0], l], [i[1], k], color= \\'k\\', zorder= 1, linewidth= 0.5)\\n\\n        # Get points for scatter plot\\n        xs = [w[0] for w in grid_scaled]\\n        ys = [w[1] for w in grid_scaled]\\n\\n        # Time evolution segment\\n        coefs = [1,1]\\n        # Initial setup\\n        psi_0, dos_0 = time_evolve_evec(target_group, coefs, 0, pure_evecs, pure_evals)\\n        dos_max = max(dos_0)\\n\\n        # Actual evolution\\n        tim = t\\n        psi, dos = time_evolve_evec(target_group, coefs, tim, all_evecs[int(v * 10)], all_evals[int(v * 10)])\\n\\n        # Plotting part\\n        cax = ax[z].scatter(x= xs, y= ys, c= dos, vmin=0, vmax= dos_max)\\n        ax[z].set_xticks([])\\n        ax[z].set_yticks([])\\n        ax[z].axis(\\'equal\\')\\n\\n    end_ax = len(time) -1\\n    cb = fig.colorbar(cax, cax=ax[len(time)], orientation=\\'vertical\\')\\n\\n    name_temp = str(t)\\n    name = name_temp.replace(\".\", \"_\")\\n\\n    v_name_temp = str(v)\\n    v_name = v_name_temp.replace(\".\", \"_\")\\n    plt.set_cmap(\\'hot_r\\')\\n    plt.savefig(f\\'es_time_evolve/{name_file}/TE_frames/V_{v_name}.png\\', bbox_inches= \\'tight\\')\\n    plt.close()\\n'"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "\"\"\"times = [np.arange(0,90,30), np.arange(0,366,122), np.arange(0,150,50)]\n",
+    "target_group = [629, 631]\n",
+    "select_Vs = [0]\n",
+    "times = [np.arange(0, 30, 10)]\n",
     "for v, time in zip(select_Vs, times):\n",
     "\n",
-    "    fig, ax = plt.subplots(1, len(time) + 1, figsize=(10, 3), gridspec_kw={\"width_ratios\":[0.33, 0.33, 0.33, 0.03]})\n",
+    "    fig, ax = plt.subplots(1, len(time) + 1, figsize=(12, 4), gridspec_kw={\"width_ratios\":[0.33, 0.33, 0.33, 0.03]})\n",
     "    \n",
     "    for z, t in enumerate(time):\n",
     "        # Plot all possible paths between vertices\n",
@@ -719,15 +710,17 @@
     "\n",
     "    v_name_temp = str(v)\n",
     "    v_name = v_name_temp.replace(\".\", \"_\")\n",
+    "\n",
+    "    empty = '_'\n",
+    "    name_file = empty.join([str(x) for x in target_group])\n",
     "    plt.set_cmap('hot_r')\n",
     "    plt.savefig(f'es_time_evolve/{name_file}/TE_frames/V_{v_name}.png', bbox_inches= 'tight')\n",
-    "    plt.close()\n",
-    "\"\"\""
+    "    plt.close()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -736,7 +729,7 @@
        "\"## Magic line for animation\\n%matplotlib inline\\n# Attempt at animating time evolution\\n\\n# Set figure up first\\nfig, ax = plt.subplots(figsize=(6,6))\\n# Set bascis\\nsites = ax.scatter(x=[], y=[], c=[])\\n\\nxs = [w[0] for w in grid_scaled]\\nys = [w[1] for w in grid_scaled]\\n\\n\\n# Set timesteps, state of choice for animation, and number of frames\\ntimestep = 1\\nn_frames = 150\\ncoefs = [1,1]\\n\\npsi_0, dos_0 = time_evolve_evec(group, coefs, 0, pure_evecs, pure_evals)\\n\\ndos_max = max(dos_0)\\n\\nplt.set_cmap('hot_r')\\n\\n# This function will do the animating\\ndef update(i):\\n    plt.clf()\\n    # t is the steps we progress, timestep sets the steplength\\n    t = i * timestep\\n\\n    # Using the time evolution to find density of states for each increment\\n    psi, dos = time_evolve_evec(group, coefs, t, evecs, evals)\\n    cf = plt.scatter(x= xs, y= ys, c= dos, vmin=0, vmax= dos_max)\\n    plt.title(f'Timestep= {timestep} and Frames= {n_frames}')\\n    plt.colorbar(cf)\\n    plt.axis('equal')\\n\\n\\nanim = FuncAnimation(fig, update, frames= n_frames, interval=250)\\n\\nanim.save(f'test_dyn.gif', writer='imagemagick', fps=24)\\n\\n#anim\""
       ]
      },
-     "execution_count": 14,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
